--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
+    "nodemailer": "^8.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
