--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.29.0",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "nodemailer": "^8.0.0",
